--- a/Components/text.module.css
+++ b/Components/text.module.css
@@ -6,7 +6,7 @@
 }
 
 .body {
-  font-size: 16px;
+  font-size: 14px;
 }
 
 .lineMask {
@@ -15,6 +15,7 @@
 
 .lineMask p {
   margin: 0px;
-  font-family: "Nanum Myeongjo";
+  font-family: "Open Sans";
   padding: 10px;
+  margin-left: -10px;
 }
