--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +9,10 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Open Sans";
 }
 
 .lenis-scrolling {
@@ -70,7 +75,7 @@ html {
 .underline-animation2 p::after {
   content: "";
   position: absolute;
-  width: 30%;
+  width: 100%;
   transform: scaleX(0);
   height: 1px;
   bottom: 0;
