--- a/Components/page.module.scss
+++ b/Components/page.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   gap: 2vw;
-  padding: 2vw;
+  padding: 40px;
   box-sizing: border-box;
   overflow: hidden;
   .column {
