--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -353,3 +353,10 @@ body {
   background-color: #ffffff; /* Replace with your desired color */
   color: black; /* Optional: if you want to change text color */
 }
+
+.anchor-offset {
+  display: block;
+  position: relative;
+  top: -50px;
+  visibility: hidden;
+}
