--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -360,3 +360,7 @@ body {
   top: -50px;
   visibility: hidden;
 }
+
+.transition-opacity {
+  transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+}
